package com.postforge.domain.board.entity;

public class PostLike {

}
